Add Psalm to the build (with baseline of current issues)

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,3 +57,4 @@ jobs:
         - phpenv config-rm xdebug.ini
       script:
         - ./tools/php-cs-fixer fix --dry-run -v --show-progress=dots --diff-format=udiff
+        - ./tools/psalm --config=.psalm/config.xml --shepherd --stats
