--- a/.travis.yml
+++ b/.travis.yml
@@ -50,12 +50,18 @@ notifications:
 
 jobs:
   include:
-    - stage: Static Code Analysis
+    - stage: "Static Code Analysis"
       php: 7.3
       env: php-cs-fixer
       install:
         - phpenv config-rm xdebug.ini
       script:
         - ./tools/php-cs-fixer fix --dry-run -v --show-progress=dots --diff-format=udiff
+    - stage: "Static Code Analysis"
+      php: 7.3
+      env: psalm
+      install:
+        - phpenv config-rm xdebug.ini
+      script:
         - travis_retry ./tools/composer update $DEFAULT_COMPOSER_FLAGS
         - ./tools/psalm --config=.psalm/config.xml --shepherd --stats
