Removed `vimeo/psalm` from `require-dev`: PHPUnit already has a scoped phar
Ref: https://github.com/sebastianbergmann/phpunit/pull/3708#discussion_r287640768

--- a/composer.json
+++ b/composer.json
@@ -49,8 +49,7 @@
         "sebastian/version": "^2.0.1"
     },
     "require-dev": {
-        "ext-PDO": "*",
-        "vimeo/psalm": "dev-master@dev"
+        "ext-PDO": "*"
     },
     "config": {
         "platform": {
