--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "sebastian/diff": "^3.0",
         "sebastian/environment": "^4.0",
         "sebastian/exporter": "^3.1",
-        "sebastian/global-state": "^2.0",
+        "sebastian/global-state": "^2.0 || ^3.0",
         "sebastian/object-enumerator": "^3.0.3",
         "sebastian/resource-operations": "^2.0",
         "sebastian/version": "^2.0.1"
