--- a/src/Framework/MockObject/Generator/mocked_class.tpl.dist
+++ b/src/Framework/MockObject/Generator/mocked_class.tpl.dist
@@ -3,9 +3,9 @@ declare(strict_types=1);
 {prologue}{class_declaration}
 {
     use \PHPUnit\Framework\MockObject\ConfigurableMethods;
+    use \PHPUnit\Framework\MockObject\OriginalObject;
 
     private $__phpunit_invocationMocker;
-    private $__phpunit_originalObject;
     private $__phpunit_returnValueGeneration = true;
 
 {clone}{mocked_methods}
@@ -14,11 +14,6 @@ declare(strict_types=1);
         return $this->__phpunit_getInvocationMocker()->expects($matcher);
     }
 {method}
-    public function __phpunit_setOriginalObject($originalObject): void
-    {
-        $this->__phpunit_originalObject = $originalObject;
-    }
-
     public function __phpunit_setReturnValueGeneration(bool $returnValueGeneration): void
     {
         $this->__phpunit_returnValueGeneration = $returnValueGeneration;
