--- a/src/Framework/MockObject/Generator/mocked_class.tpl.dist
+++ b/src/Framework/MockObject/Generator/mocked_class.tpl.dist
@@ -4,9 +4,9 @@ declare(strict_types=1);
 {
     use \PHPUnit\Framework\MockObject\ConfigurableMethods;
     use \PHPUnit\Framework\MockObject\OriginalObject;
+    use \PHPUnit\Framework\MockObject\ReturnValueGeneration;
 
     private $__phpunit_invocationMocker;
-    private $__phpunit_returnValueGeneration = true;
 
 {clone}{mocked_methods}
     public function expects(\PHPUnit\Framework\MockObject\Matcher\Invocation $matcher): \PHPUnit\Framework\MockObject\Builder\InvocationMocker
@@ -14,11 +14,6 @@ declare(strict_types=1);
         return $this->__phpunit_getInvocationMocker()->expects($matcher);
     }
 {method}
-    public function __phpunit_setReturnValueGeneration(bool $returnValueGeneration): void
-    {
-        $this->__phpunit_returnValueGeneration = $returnValueGeneration;
-    }
-
     public function __phpunit_getInvocationMocker(): \PHPUnit\Framework\MockObject\InvocationMocker
     {
         if ($this->__phpunit_invocationMocker === null) {
