--- a/tests/_files/mock-object/MockClassGenerated.tpl.dist
+++ b/tests/_files/mock-object/MockClassGenerated.tpl.dist
@@ -1,10 +1,10 @@
 namespace PHPUnit\TestFixture\MockObject;
 
-use PHPUnit\Framework\MockObject\ConfigurableMethods;
+use PHPUnit\Framework\MockObject\TestDoubleApi;
 
 class MockClassGenerated
 {
-    use ConfigurableMethods;
+    use TestDoubleApi;
 
     public static function getConfigurableMethods(): array
     {
