--- a/src/Framework/MockObject/Generator/mocked_class.tpl.dist
+++ b/src/Framework/MockObject/Generator/mocked_class.tpl.dist
@@ -2,6 +2,6 @@ declare(strict_types=1);
 
 {prologue}{class_declaration}
 {
-    use \PHPUnit\Framework\MockObject\TestDoubleApi;
+    use \PHPUnit\Framework\MockObject\TestDoubleApi;{method}
 
-{clone}{mocked_methods}{method}}{epilogue}
+{clone}{mocked_methods}}{epilogue}
