--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -3,20 +3,16 @@
 # Number of days of inactivity before an Issue or Pull Request becomes stale
 daysUntilStale: 60
 
-# Number of days of inactivity before a stale Issue or Pull Request is closed.
+# Number of days of inactivity before an Issue or Pull Request with the stale label is closed.
 # Set to false to disable. If disabled, issues still need to be closed manually, but will remain marked as stale.
 daysUntilClose: 7
 
+# Only issues or pull requests with all of these labels are check if stale. Defaults to `[]` (disabled)
+onlyLabels:
+    - waiting-for-feedback
+
 # Issues or Pull Requests with these labels will never be considered stale. Set to `[]` to disable
-exemptLabels:
-  - blocked
-  - enhancement
-  - backward-compatibility-break
-  - feature-removal
-  - php-support-removal
-  - process
-  - rfc
-  - refactoring
+exemptLabels: []
 
 # Set to true to ignore issues in a project (defaults to false)
 exemptProjects: false
@@ -24,12 +20,15 @@ exemptProjects: false
 # Set to true to ignore issues in a milestone (defaults to false)
 exemptMilestones: false
 
+# Set to true to ignore issues with an assignee (defaults to false)
+exemptAssignees: false
+
 # Label to use when marking as stale
 staleLabel: stale
 
 # Comment to post when marking as stale. Set to `false` to disable
 markComment: >
-  This issue has been automatically marked as stale because it has not had activity within the last 60 days. It will be closed after 7 days if no further activity occurs. Thank you for your contributions.
+    This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.
 
 # Comment to post when removing the stale label.
 # unmarkComment: >
@@ -37,7 +36,7 @@ markComment: >
 
 # Comment to post when closing a stale Issue or Pull Request.
 closeComment: >
-  This issue has been automatically closed because it has not had activity since it was marked as stale. Thank you for your contributions.
+    This issue has been automatically closed because it has not had activity since it was marked as stale. Thank you for your contributions.
 
 # Limit the number of actions per hour, from 1-30. Default is 30
 limitPerRun: 30
@@ -45,3 +44,14 @@ limitPerRun: 30
 # Limit to only `issues` or `pulls`
 only: issues
 
+# Optionally, specify configuration settings that are specific to just 'issues' or 'pulls':
+# pulls:
+#   daysUntilStale: 30
+#   markComment: >
+#     This pull request has been automatically marked as stale because it has not had
+#     recent activity. It will be closed if no further activity occurs. Thank you
+#     for your contributions.
+
+# issues:
+#   exemptLabels:
+#     - confirmed
