With #3577 solved, there is no need for building a PHAR that is not scoped

--- a/build.xml
+++ b/build.xml
@@ -121,49 +121,15 @@
         </exec>
     </target>
 
-    <target name="signed-scoped-phar" depends="scoped-phar" description="Create signed scoped PHAR archive of PHPUnit and all its dependencies">
-        <exec executable="gpg" failonerror="true">
-            <arg value="--local-user"/>
-            <arg value="sb@sebastian-bergmann.de"/>
-            <arg value="--armor"/>
-            <arg value="--detach-sign"/>
-            <arg path="${basedir}/build/phpunit-scoped-library-${version}.phar"/>
-        </exec>
-
-        <exec executable="gpg" failonerror="true">
-            <arg value="--local-user"/>
-            <arg value="sb@sebastian-bergmann.de"/>
-            <arg value="--armor"/>
-            <arg value="--detach-sign"/>
-            <arg path="${basedir}/build/phpunit-scoped-${version}.phar"/>
-        </exec>
-    </target>
-
     <target name="phar" depends="-phar-prepare,-phar-determine-version" description="Create PHAR archive of PHPUnit and all its dependencies">
         <antcall target="-phar-build">
             <param name="type" value="release"/>
-            <param name="scoped" value="false"/>
         </antcall>
     </target>
 
     <target name="phar-nightly" depends="-phar-prepare" description="Create PHAR archive of PHPUnit and all its dependencies (nightly)">
         <antcall target="-phar-build">
             <param name="type" value="nightly"/>
-            <param name="scoped" value="false"/>
-        </antcall>
-    </target>
-
-    <target name="scoped-phar" depends="-phar-prepare,-phar-determine-version" description="Create scoped PHAR archive of PHPUnit and all its dependencies">
-        <antcall target="-phar-build">
-            <param name="type" value="release"/>
-            <param name="scoped" value="true"/>
-        </antcall>
-    </target>
-
-    <target name="scoped-phar-nightly" depends="-phar-prepare" description="Create scoped PHAR archive of PHPUnit and all its dependencies (nightly)">
-        <antcall target="-phar-build">
-            <param name="type" value="nightly"/>
-            <param name="scoped" value="true"/>
         </antcall>
     </target>
 
@@ -172,7 +138,6 @@
         <mkdir dir="${basedir}/build/phar-scoped"/>
 
         <copy file="${basedir}/phpunit.xsd" tofile="${basedir}/build/phar/phpunit.xsd"/>
-        <copy file="${basedir}/phpunit.xsd" tofile="${basedir}/build/phar-scoped/phpunit.xsd"/>
 
         <exec executable="${basedir}/build/phar-manifest.php" output="${basedir}/build/phar/manifest.txt" failonerror="true"/>
 
@@ -385,7 +350,7 @@
             <arg value="${type}"/>
         </exec>
 
-        <exec if:true="${scoped}" executable="${basedir}/tools/php-scoper" taskname="php-scoper">
+        <exec executable="${basedir}/tools/php-scoper" taskname="php-scoper">
             <arg value="add-prefix" />
             <arg value="--no-ansi" />
             <arg value="--force" />
@@ -408,12 +373,10 @@
             <arg value="--hash" />
             <arg value="SHA-1" />
             <arg value="--output" />
-            <arg if:true="${scoped}" path="${basedir}/build/phpunit-scoped-library-${_version}.phar" />
-            <arg unless:true="${scoped}" path="${basedir}/build/phpunit-library-${_version}.phar" />
+            <arg path="${basedir}/build/phpunit-library-${_version}.phar" />
             <arg value="--template" />
             <arg path="${basedir}/build/library-phar-autoload.php.in" />
-            <arg if:true="${scoped}" path="${basedir}/build/phar-scoped" />
-            <arg unless:true="${scoped}" path="${basedir}/build/phar" />
+            <arg path="${basedir}/build/phar-scoped" />
         </exec>
 
         <copy file="${basedir}/build/binary-phar-autoload.php.in" tofile="${basedir}/build/binary-phar-autoload.php"/>
@@ -427,19 +390,15 @@
             <arg value="--hash" />
             <arg value="SHA-1" />
             <arg value="--output" />
-            <arg if:true="${scoped}" path="${basedir}/build/phpunit-scoped-${_version}.phar" />
-            <arg unless:true="${scoped}" path="${basedir}/build/phpunit-${_version}.phar" />
+            <arg path="${basedir}/build/phpunit-${_version}.phar" />
             <arg value="--template" />
             <arg path="${basedir}/build/binary-phar-autoload.php" />
-            <arg if:true="${scoped}" path="${basedir}/build/phar-scoped" />
-            <arg unless:true="${scoped}" path="${basedir}/build/phar" />
+            <arg path="${basedir}/build/phar-scoped" />
         </exec>
 
-        <chmod if:true="${scoped}" file="${basedir}/build/phpunit-scoped-${_version}.phar" perm="ugo+rx"/>
-        <chmod unless:true="${scoped}" file="${basedir}/build/phpunit-${_version}.phar" perm="ugo+rx"/>
+        <chmod file="${basedir}/build/phpunit-${_version}.phar" perm="ugo+rx"/>
 
         <delete dir="${basedir}/build/phar"/>
-        <delete dir="${basedir}/build/phar-scoped"/>
         <delete file="${basedir}/build/binary-phar-autoload.php"/>
     </target>
 
