--- a/.travis.yml
+++ b/.travis.yml
@@ -66,3 +66,10 @@ jobs:
         - travis_retry ./tools/composer update $DEFAULT_COMPOSER_FLAGS
         - ./tools/psalm --config=.psalm/static-analysis.xml --no-progress
         - ./tools/psalm --config=.psalm/config.xml --no-progress --shepherd --stats
+    - stage: "Static Code Analysis"
+      php: 7.3
+      env: roave-backward-compatibility-check
+      install:
+          - phpenv config-rm xdebug.ini
+      script:
+          - ./tools/roave-backward-compatibility-check
