--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,25 @@ jobs:
         uses: docker://php:7.3-cli
         with:
           args: ./tools/php-cs-fixer fix --diff-format=udiff --dry-run --show-progress=dots --using-cache=no --verbose
+
+  type-checker:
+    name: Type Checker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Update dependencies with composer
+        uses: docker://composer:1.9.0
+        with:
+          args: composer update --no-interaction --no-ansi --no-progress --no-suggest
+
+      - name: Run vimeo/psalm on public API
+        uses: docker://php:7.3-cli
+        with:
+          args: ./tools/psalm --config=.psalm/static-analysis.xml --no-progress --show-info=false
+
+      - name: Run vimeo/psalm on internal code
+        uses: docker://php:7.3-cli
+        with:
+          args: ./tools/psalm --config=.psalm/config.xml --no-progress --shepherd --show-info=false --stats
