--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           args: php -v
 
       - name: Update dependencies with composer
-        uses: ./.docker/php-7.3
+        uses: docker://composer:1.9.0
         with:
           args: composer update --no-interaction --no-ansi --no-progress --no-suggest
 
